build: compile and validate a module's sources as a project; per-module backend
The compile and validate tasks were single-file, so a module importing siblings
couldn't build. CompileModule and Check now carry the module's source list
(entry first); JS bundles via htmlPageProject, linear WASM via moduleFromSources,
WasmGC compiles the entry; validate type-checks them together via checkProject.
Modules gain a `backend` field (withBackend) so the default compile emits JS or
wasm, with the artifact extension chosen accordingly. compile/check keep their
single-file forms; compileAll/checkAll take a source list. Tested: a multi-file
JS module bundles its import, and a Wasm-backend module emits a .wasm binary.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>